# devit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.md.old  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  agent-clean.patch  apply.patch  devit.core.toml  devit.toml  devit_api.schema.json  devit_bench_report.json  err.txt  fix-apply.patch  next.patch  plan  run-cmd.patch  run.ps1  run_daemon.sh  sarif.patch  setup-landing.sh  supervisable_mcp_unix.patch  win_devit.core.toml
.devit/: devit.toml  hmac.key  index.json  journal.jsonl  sbom.cdx.json
.devit/plugins/: .gitkeep
.devit/plugins/echo_sum/: devit-plugin.toml
.devit/recipes/: add-ci.yaml  migrate-jest-vitest.yaml  rust-upgrade-1.81.yaml
.devit/reports/: approve_run2.json  commit_meta.json  devit_tui_help.txt  impacted.out  junit.xml  mcp_handshake.json  mcp_redaction.json  precommit.json  quality.json  recipe_add_ci.out  recipes_list.json  sample.diff  sarif.json  status_v05.json  summary.md  tool_list.json  v04_cli.json  v04_echo.json  v04_shell.json
.githooks/: pre-commit  pre-push
.github/: pr_body_s1.md  pull_request_template.md
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/backends/openai_like/: Cargo.toml
crates/build-info/: Cargo.toml  build.rs
crates/cli/: Cargo.toml  journal.jsonl
crates/cli/benches/: compression_bench.rs
crates/cli/src/: capabilities.rs  context.rs  lib.rs  main.rs  mcp.rs  plugins.rs
crates/cli/src/core/: atomic_patcher.rs  config.rs  errors.rs  file_ops.rs  formats.rs  fs.rs  help_system.rs  journal.rs  mod.rs  num_compat.rs  orchestration.rs  patch.rs  patch_compat.rs  patch_parser.rs  patch_preview.rs  path_security.rs  policy.rs  request_id.rs  safe_write.rs  sandbox.rs  schema.rs  serde_api.rs  snapshot.rs  snapshot_api.rs
crates/cli/src/core/security/: workspace.rs
crates/cli/src/platform/: mod.rs  permissions.rs  shell.rs
crates/cli/tests/: common.rs  compression_tests.rs  contract_test_2.rs  contract_test_3.rs  contract_test_4.rs  contract_test_5.rs  contract_test_6.rs  contracts.rs  e2e_orchestration.rs  e2e_patch_apply.rs  e2e_runner_complete.rs  help_system_tests.rs  integration_core.rs  it_rc1_journal.rs  it_rc1_patch_apply.rs  it_rc1_policy_approval.rs  it_rc1_snapshot.rs  it_rc1_test_runner.rs  mcp_ext_tests.rs  mcp_file_write.rs  mcp_journal_append.rs  mcp_patch_apply.rs  mcp_schema.rs  mcp_snapshot.rs  mcp_watchdog.rs  orchestration_integration_tests.rs  tools_json.rs
crates/cli/tests/core/: policy_tests.rs
crates/cli/tests/fixtures/: config.rs  mcp.rs  mod.rs  patches.rs  snapshots.rs
crates/common/: Cargo.toml
crates/common/src/: cache.rs  lib.rs  limits.rs  process_registry.rs  process_utils.rs
crates/common/src/fs/: mod.rs  safe_write.rs
crates/common/src/orchestration/: mod.rs  orchestration.rs  types.rs
crates/devit-agent/: Cargo.toml
crates/mcp-core/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: auth.rs  http_server.rs  lib.rs  main.rs  transport.rs
crates/mcp-tools/: Cargo.toml
crates/mcp-tools/src/: atomic_patcher.rs  directory_list.rs  errors.rs  exec.rs  fetch_url.rs  file_explore.rs  file_read.rs  file_write.rs  git.rs  help.rs  journal.rs  journal_best_effort.rs  keyboard.rs  kill.rs  lib.rs  mouse.rs  net_utils.rs  ocr.rs  ocr_alerts.rs  orchestration.rs  patch_apply.rs  ps.rs  pwd.rs  screenshot.rs  search_web.rs  snapshot.rs  worker.rs
crates/mcp-tools/tests/: etld1_shape_s1.rs  meta_shape_s1.rs  shape_s1.rs
crates/orchestration/: Cargo.toml
crates/orchestration/examples/: README.md  basic_delegation.rs  daemon_monitoring.rs
crates/orchestration/src/: backend.rs  daemon.rs  lib.rs  local.rs  types.rs
crates/orchestration/src/ipc/: mod.rs  unix.rs  windows.rs
crates/orchestration/tests/: ack_stability.rs  integration_tests.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/sandbox/src/backend/: mod.rs  unix.rs  windows.rs
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml
demo/: hello.txt
devit-landing-preview/: deploy.sh  fr-section-fixed.txt  index.html  package-lock.json  package.json  package.prod.json  regenerate.sh  vite.config.ts
devit-landing-preview/deploy-gandi/: server.js
devit-landing-preview/src/: App.tsx
devitd/: Cargo.toml  devitd.journal
devitd-client/: Cargo.toml
devitd-client/src/: compact.rs  lib.rs
devitd/src/: compact.rs  journal.rs  main.rs  policy.rs  process_registry.rs  process_utils.rs  reaper.rs  worker_executor.rs
devitd/tests/: ack_socket_unix.rs  windows_pipes.rs
docs/: CONFIGURATION.md  DAEMON_PROTOCOL.md  MCP_TOOLS.md  ORCHESTRATION.md  approvals.md  recipes.md  windows_daemon_setup.md
docs/examples/: ocr_alerts_rules_default.json
docs/experimental/: MCP_FILE_EXPLORATION.md
examples/: devit.sample.toml
examples/devit-agent-mvp/: Cargo.toml  devit_api.schema.json
git-hooks/: README.md  pre-commit
samples/: ok_add_fn.diff
schemas/: error.schema.json  patch_apply.request.schema.json  response.schema.json
scripts/: analyze_git_history.sh  cargo_error_report.py  cleanup_for_public.sh  desktop_input_demo.ps1  desktop_input_demo.sh  devit_notify_example.ps1  devit_notify_example.sh  devit_notify_telegram.sh  devit_notify_wrapper.bat  devit_status_probe.sh  devitd-start.sh  e2e_mcp.sh  e2e_plugin.sh  install-tesseract-windows.ps1  install_hooks.sh  lint_errors.sh  ping_claude  ping_lmstudio  prepush-smoketest.sh  run_devitd_windows.ps1  run_devitd_windows_http.ps1  run_mcp_server_windows_http.ps1  smoke.ps1  smoke_full.sh  smoke_mcp_redaction.sh  test_subprocess_worker.sh  v04_quick_test.sh  v04_sanity_supplychain.sh  v05_sanity_rc1.sh
test/code-analyse/: Cargo.toml  Makefile  README.md  rules.txt
test/code-analyse/examples/: example_bad.c  example_good.c
test/code-analyse/src/: analyzer.rs  bin_analyze.rs  bin_request.rs  llm.rs  main.rs  rules.rs  tests_integration.rs
tests/: security_workspace.rs
tools/: devit_checkup.sh
tools/analysis/: analyze_bench_results.py  rust_analyzer.py  simple_bench_analysis.py
(+16 files in other folders)
