[package]
name = "devitd-client"
version = "0.1.0"
edition = "2021"
description = "Client library for DevIt orchestration daemon"

[[bin]]
name = "devit-smart"
path = "src/bin/devit-smart.rs"

[[bin]]
name = "devit-worker"
path = "src/bin/devit-worker.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }