[package]
name = "devitd"
version = "0.1.0"
edition = "2021"
description = "DevIt orchestration daemon for AI-to-AI communication"

[[bin]]
name = "devitd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
nix = { version = "0.27", features = ["process", "signal"] }
fs2 = "0.4"
libc = "0.2"
devit-common = { path = "../crates/common" }
devit-build-info = { path = "../crates/build-info" }
strip-ansi-escapes = "0.1"
cfg-if = "1"
screenshots = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3"
devitd-client = { path = "../devitd-client" }
