# -----------------------------
# crates/cli/Cargo.toml
# -----------------------------
[package]
name = "devit-cli"
version.workspace = true
edition = "2021"
build = "build.rs"

[features]
# Aucun impact par défaut. Active les bins/commandes.
default = ["snapshot-stub"]
experimental = ["jsonschema"]
sandbox = ["devit-sandbox"]
snapshot-stub = []

## Conserver le nom du binaire `devit`
## (sinon Cargo le renommerait en `devit-cli`)
[[bin]]
name = "devit"
path = "src/main.rs"

# Binaire de test Core Engine
[[bin]]
name = "devit-test"
path = "src/bin/devit-test.rs"

# Binaire expérimental Plugins WASM/WASI
[[bin]]
name = "devit-plugin"
path = "src/bin/devit-plugin.rs"
required-features = ["experimental"]

# Binaire CLI Prompt 7 - interfaces pures
[[bin]]
name = "devit-cli-prompt7"
path = "src/bin/devit.rs"

# [[bin]] sections for legacy `devit-mcpd*` binaries intentionally disabled.
# They are archived in favour of the canonical `mcp-server` binary.
# [[bin]]
# name = "devit-mcpd-prompt11"
# path = "src/bin/devit-mcpd-prompt11.rs"

# [[bin]]
# name = "devit-mcpd-m1"
# path = "src/bin/devit-mcpd-m1.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
path-clean = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
ignore = "0.4"
globset = "0.4"
rayon = "1.10"
memmap2 = "0.9"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
pathdiff = "0.2"
regex = { workspace = true }

# local crates
devit-common = { path = "../common" }
devit-agent = { path = "../agent" }
devit-tools = { path = "../tools" }
devit-sandbox = { path = "../sandbox", optional = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std","clock"] }
libc = "0.2"
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = { workspace = true }
jsonschema = { version = "0.18", optional = true }
blake3 = { workspace = true }
flate2 = "1.0"
hostname = "0.3"

[dev-dependencies]
tempfile = "3"
predicates = "3"
assert_cmd = "2"
criterion = "0.5"
shell-escape = { workspace = true }
regex = "1"

[[bench]]
name = "compression_bench"
harness = false
