[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
mcp-core = { path = "../mcp-core" }
mcp-tools = { path = "../mcp-tools" }
devit-build-info = { path = "../build-info" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures-core = { workspace = true }
hyper = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
