# -----------------------------
# crates/sandbox/Cargo.toml
# -----------------------------
[package]
name = "devit-sandbox"
version.workspace = true
edition = "2021"


[dependencies]
anyhow = { workspace = true }
devit-common = { path = "../common" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
]}
