[package]
name = "code-analyzer"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of C code analysis bash scripts"
license = "Apache-2.0"

[[bin]]
name = "request"
path = "src/bin/request.rs"

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
regex = "1.10"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"